# tokscale-bundle

./: .gitmodules  Cargo.toml  README.md
docs/diagrams/: combined-fake-home-flow.drawio
docs/superpowers/plans/: 2026-04-22-tokscale-bundle.md
docs/superpowers/specs/: 2026-04-22-tokscale-bundle-design.md
src/: archive.rs  layout.rs  lib.rs  main.rs  manifest.rs  replay.rs  settings.rs  tokscale.rs
tests/: cli.rs  layout.rs
