[package]
name = "tokscale-bundle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
hex = "0.4"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.14"
walkdir = "2.5"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
tokscale-core = { path = "vendor/tokscale/crates/tokscale-core" }
